# OpenGL

./: README.md
HW2/: CMakeLists.txt  main.cpp
HW4/: main.cpp
HW6/: CMakeLists.txt  main.cpp
HW8/: CMakeLists.txt  main.cpp
teapot/: CMakeLists.txt  main.cpp
uglyduck/: CMakeLists.txt  main.cpp
